--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,8 +30,9 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 
-firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase"}
-firebase_auth = { group = "com.google.firebase", name = "firebase-auth-ktx"}
+firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
+firebase_auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
+firebase_store = { group = "com.google.firebase", name = "firebase-firestore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
